<resources>
    <string name="app_name">Entrada</string>
	<string name="str_pin">Enter PIN</string>
    <string name="hockeyapp_api_key">d2ae63fffddf0e2e84be60847da190e9</string>
    <string name="crash_toast_text">Oops. Entrada has crashed. Please wait while we generate an error report...</string>
    <string name="crash_dialog_title">Entrada has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
        application to stop. Please help us fix this by sending us error data,
        all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">(Optional) What were you doing when the crash occurred?</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>
	<string name="sync_failed">Sync Failed.</string>
	<string name="sync_updating">Updating...</string>
	<string name="upload_error">Error uploading this dictation</string>
    <string name="user_select_title">Select User</string>
    <string name="user_select_add_user_button">Add New User</string>
	<string name="title_success">Success</string>
	<string name="title_error">Error</string>
	<string name="clear_all_jobs">All jobs have been deleted</string>
    <string name="clear_all_jobs_error">There are local changes. Please sync before deleting all jobs.</string>
    <string name="pin_entry_pin_hint">Enter PIN</string>
    <string name="pin_entry_login_button">Login</string>
    <string name="pin_entry_invalid_pin">Incorrect PIN</string>
	<string name="pin_entry_pin_length">PIN codes must be between 4-10 digits in length</string>
    <string name="pin_entry_ok">OK</string>
	<string name="pin_entry_error_title">PIN Error</string>
    <string name="pin_mismatch">PIN Mismatch</string>
    <string name="list_accounts_title">Accounts</string>
    <string name="list_accounts_add_account_button">Add New Account</string>
    <string name="add_account_title">@string/list_accounts_add_account_button</string>
    <string name="add_account_name_hint">Account Name</string>
    <string name="add_account_display_name_hint">Display Name</string>
    <string name="add_account_api_host_hint">API Host</string>
    <string name="add_account_remote_username_hint">Remote Username</string>
    <string name="add_account_remote_password_hint">Remote Password</string>
    <string name="add_account_test_account_button">Test</string>
    <string name="add_account_cancel_account_button">Cancel</string>
    <string name="add_account_save_account_button">Create</string>
    <string name="add_account_testing_label">Testingâ€¦</string>
    <string name="add_account_saving_label">Creating Accountâ€¦</string>
    <string name="add_user_save_account_button">Create</string>
    <string name="add_user_name_hint">User Name</string>
    <string name="add_user_display_name_hint">User Display Name</string>
    <string name="add_user_pin_hint">PIN (4 digit minimum)</string>
    <string name="add_user_throbber_label">Creating Userâ€¦</string>
    <string name="job_list_search_hint">MRN or Patient Name</string>
    <string name="job_list_sync_now">Sync Now</string>
    <string name="job_list_change_password">Change Password</string>
    <string name="job_list_manage_accounts">Manage Accounts</string>
    <string name="job_list_manage_queues">Manage Queues</string>
    <string name="job_list_debug_dump">Debug Dump</string>
    <string name="job_display_record_button">Record Dictation</string>
    <string name="job_display_record_button_stop">Stop Recording</string>
    <string name="job_display_insert_option">Insert</string>
    <string name="job_display_overwrite_option">Overwrite</string>
    <string name="job_display_delete_to_end">Delete to End</string>
    <string name="job_display_send">Send</string>
    <string name="job_display_save">Save</string>
    <string name="job_display_dialog_title">Save job?</string>
    <string name="job_display_dialog_message">Would you like to save changes to this job?</string>
    <string name="job_display_dialog_cancel">Cancel</string>
    <string name="job_display_dialog_discard">Don\'t save</string>
    <string name="sync_title">Syncing With Server</string>
	<string name="limit_msg">Audio Recording was Stopped. \n10 Minute limit reached</string>
    <string name="job_list_contextual_delete">Delete</string>
    <string name="job_list_contextual_undelete">Undelete</string>
    <string name="job_list_show_deleted_jobs">Show Deleted Jobs</string>
    <string name="job_list_search_clear_accessibility">Clear this search box.</string>
    <string name="job_list_add_job">Add Job</string>
    <string name="job_list_contextual_send_to_queue">Send to Queue</string>
    <string name="job_list_contextual_sync_with_server">Upload Changes to Server</string>
    <string name="job_list_contextual_do_not_sync_with_server">Do Not Upload Changes to Server</string>
    <string name="manage_accounts_title">Manage Accounts</string>
    <string name="manage_accounts_add_account_button">Add Account</string>
    <string name="edit_account_delete_this_account">Delete Account</string>
    <string name="notification_dictation_upload"></string>
    <string name="notification_sync_service"></string>
    <string name="job_list_filter_title">Filters</string>
    <string name="job_list_show_held_jobs">Show Held Jobs</string>
    <string name="job_display_send_toast">Your dictation will be uploaded shortly.</string>
    <string name="job_display_save_toast">Your dictation has been saved.</string>
    <string name="add_job_generic_job_caption">Generic Job</string>
    <string name="add_job_patient_job_caption">New Job</string>
    <string name="add_job_patient_help_text">Or search for a patient below:</string>
    <string name="search_feedback_searching">Searching...</string>
    <string name="search_feedback_no_results">No results found.</string>
    <string name="add_account_clinic_code_hint">Clinic Code</string>
    <string name="add_account_prod_server">Live</string>
    <string name="add_account_dev_server">Development</string>
    <string name="show_licenses">Show Licenses</string>
    <string name="inbox">Inbox</string>
    <string name="clear_jobs_error">There are local changes. Please sync before deleting all jobs</string>
    <string name="job_list_today_category">Today</string>
    <string name="job_list_tomorrow_category">Tomorrow</string>
    <string name="job_list_todo_category">All Todo</string>
    <string name="job_list_dictated_category">Dictated</string>
    <string name="job_list_deleted_category">Deleted</string>
    <string name="job_list_all_category">All Jobs</string>
    <string name="job_list_stat_category">Stat</string>
    <string name="job_list_held_category">Held</string>
    <string name="queues_edit">Edit Queues</string>
	<string name="queues_express">Express Queues are not enabled</string>
	<string name="acc_title_accounts">ACCOUNTS</string>
	<string name="acc_title_global">GLOBAL SETTINGS</string>
	<string name="acc_title_passcode">PASSCODE</string>
	<string name="acc_title_adminstration">ADMINISTRATION</string>
	<string name="acc_title_software">SOFTWARE</string>
	<string name="acc_add">Add Account</string>
	<string name="acc_bluetooth">Enable Bluetooth</string>
	<string name="acc_proximity">Enable Proximity Lock</string>
	<string name="acc_days_sync">Days to sync</string>
	<string name="acc_mins_sync">Sync every(min)</string>
	<string name="acc_vibe_on_record">Vibrate on Record</string>
	<string name="acc_passcode">Require Passcode</string>
	<string name="acc_vibe_on_stop">Vibrate on Stop</string>
	<string name="acc_secure_messaging">Screen Capture Security</string>
	<string name="acc_passcode_tag">Shorter times are more secure.</string>
	<string name="setup_1">DO YOU HAVE A CLINIC CODE?</string>
	<string name="setup_11">I Have a Clinic Code</string>
	<string name="setup_12">I Do Not Have a Clinic Code</string>
	<string name="setup_2">DO YOU HAVE A DEMO ACCOUNT?</string>
	<string name="setup_22">I have a demo account</string>
	<string name="del_acc_title">Delete Account</string>
	<string name="del_acc_msg">Are you sure you want to delete this account?</string>
	<string name="del_acc_err_title">Error</string>
	<string name="del_acc_err_msg">Entrada requires atleast one account at all times. You must create a new account before deleting this account</string>
	<string name="sw_title">SOFTWARE</string>
	<string name="sw_version">Version</string>
	<string name="sw_build">Build</string>
	<string name="title_sync_error">Failed to sync</string>
	<string name="msg_sync_error">Network connection is not available.</string>
	<string name="admin_title">ADMINSTRATION</string>
	<string name="admin_logs">Send Logs to Support</string>
	<string name="admin_diagnostics">Send Diagnostics Report</string>
	<string name="diagnostics_recepient">edictate-support@entradahealth.com</string>
	<string name="diagnostics_text">Please review the file</string>
	<string name="dg_logs_success">Logs were sent successfully.</string>
	<string name="dg_logs_fail">Failed to send logs.</string>
	<string name="manage_q_hold_error">Please sync all completed and held jobs before editing your queues.</string>
	<string name="manage_q_upload_error">Please wait for sync to complete before editing your queues.</string>
	<string name="dic_interupt_title">Dictation Interrupted</string>
	<string name="dic_interupt_short">Recording has paused.</string>
	<string name="dic_interupt_long">The previous recording session was interrupted. It has been restored and ready to be resumed.</string>
	<string name="dic_empty_title">No Audio Recorded</string>
	<string name="dic_empty_msg">All jobs must include audio to send. If you are sending a picture only, record at least 5 seconds of blank audio. You may also put this job on hold and save.</string>
	<string name="dic_image_capture_not_enabled">Secure Image Capture is not currently enabled for your group. Please contact your Entrada Account Manager to learn more about this feature.</string>
	<string name="sec_msg_conn_error">You need to accept our terms and conditions inorder to use Secure Messaging. Check your intenet connection and try again</string>
	<string name="grp_delete_title">Delete Group</string>
	<string name="grp_delete_msg">Are you sure you want to delete</string>
	<string name="title_ref_phy">REFERRING PHYSICIAN</string>
	<string name="title_pri_phy">PRIMARY CARE PHYSICIAN</string>
    <string-array name="nav_drawer_items">
        <item >AVAILABLE JOBS</item>
        <item >Today</item>
        <item >Tomorrow</item>
        <item >Stat</item>
        <item >All Jobs</item>
        <item >DICTATED JOBS</item>
        <item >Hold</item>
        <item >Deleted</item>
        <item >Completed</item>
        <item >ADMINISTRATION</item>
        <item >Settings</item>
        <item >Manage Queues</item>
    </string-array>
    <string name="row_tag_01">01</string>
	<string name="row_tag_02">02</string>
	<string name="str_allcontacts">All Contacts</string>
	<string name="str_button_group">Groups</string>
    <string name="str_button_cancel">Cancel</string>
	<string name="str_new_grp">New Group</string>
    <string name="str_existing_grp">Existing Group</string>
    <string name="str_ok">Ok</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_no_grps">No Groups found</string>
	<string name="str_grp">Groups</string>
	<string name="str_Done">Done</string>
	<string name="str_empty_grp">Group can\'t be empty</string>
	<string name="str_grp_exists">Group Name already exists</string>
	<string name="str_no_grps_del">No groups selected to delete</string>
	<string name="hint_chat_msg">Type your message</string>
	<string name="hint_search">Search</string>
	<string name="pmenu_take_photo">Take Photo</string>
	<string name="pmenu_choose_photo">Choose Existing Photo</string>
	<string name="pmenu_attach_clinical_data">Attach Clinical Data</string>
</resources>