<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:background="@color/dark_gray"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="12dp"
            android:textStyle="bold"
            android:text="@string/str_grp"
            android:layout_centerHorizontal="true" 
            />
        <Button 
            android:id="@+id/done"
            android:textColor="@color/blue"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/str_Done"
            />
        <ImageButton
            android:id="@+id/grpdelete"
            android:layout_toLeftOf="@id/done"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/menu_discard"
            android:visibility="visible"/>
        </RelativeLayout>
    
    <ExpandableListView
        android:id="@+id/groupsLV"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ExpandableListView>
    
    <TextView 
        android:id="@+id/noGroupsFoundTV"
        android:text="@string/str_no_grps"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible" />

</LinearLayout>