<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="0dp" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background" >

        <Button
            android:id="@+id/groupsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:text="@string/str_button_group"
            android:textColor="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/str_allcontacts"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:text="@string/str_button_cancel"
            android:textColor="@color/blue" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/rlSearch"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/dark_gray"
        android:padding="8dp" >

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/search_bg_round"
            android:drawableLeft="@drawable/ic_action_search"
            android:drawablePadding="8dp"
            android:hint="@string/hint_search"
            android:imeOptions="actionDone"
            android:singleLine="true" >

        </EditText>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical" />

    <TextView
        android:id="@+id/tvFavorite"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_weight="0.2"
        android:text="Favorites"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <com.hb.views.PinnedSectionListView
        android:id="@+id/lvFavorites"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:visibility="visible" >
    </com.hb.views.PinnedSectionListView>

    <com.hb.views.PinnedSectionListView
        android:id="@+id/lvAllContacts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="2"
        android:background="@color/white" >
    </com.hb.views.PinnedSectionListView>

</LinearLayout>